--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.0",
+    "@upstash/redis": "^1.35.8",
     "mcp-handler": "^1.0.2",
     "next": "15.5.7",
     "react": "19.1.0",
