--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.0",
+    "better-auth": "^1.4.7",
     "mcp-handler": "^1.0.2",
     "next": "15.5.7",
     "react": "19.1.0",
